# tradingview_prof_backtest

./: .gitignore  EXPLORATION_LOG_webhook信号到回测计算.md  README.md  SKILL.md  pyproject.toml
src/: factor_classification_report.txt  factor_strategy_combination_report.md  factor_type_classification_report.md
src/factor_impl/: factors.tex  split_factors_tex.py
src/factor_impl/factors/: __init__.py  abnormal_negative_reversal.py  abnormal_positive_reversal.py  abnormal_return_avg.py  abnormal_volume_daily.py  abnretd.py  abs_ret_amount_corr.py  acma.py  active_buy_ratio.py  active_buy_specificity.py  active_chip_ratio.py  afh_close.py  amount_entropy.py  amt_max.py  analyst_anchoring_bias.py  analyst_co_coverage_indirect_momentum.py  apm.py  ask_depth.py  atd_price_lowest.py  atd_price_lowest_sell.py  attention_abnormal_return.py  attention_capture_vol.py  attention_decay_panic.py  attention_events.py  attention_limit.py  attention_market_volume.py  attention_spillover.py  attention_turnover.py  avg_order_book_depth.py  avg_outflow_per_trade_ratio.py  base.py  (+267 more)
src/factor_impl_tv/: list.md
src/portfolio_backtest/: database.py  engine.py  main.py  models.py  report.py  schemas.py
src/tradingview_script/: indicator_volatility_monitor.pine  strategy1_pairs_trading.pine  strategy2_stock_index_hedge.pine  strategy3_multi_factor_rotation.pine  strategy4_sector_strength_divergence.pine  strategy5_commodity_currency_correlation.pine  strategy6_machine_learning_ensemble.pine
static/: app.js  backtest.html  index.html  report.html  style.css
tests/: test_api.py  test_engine.py
(+514 files in other folders)
