[project]
name = "portfolio-backtest"
version = "0.1.0"
description = "Portfolio backtest server that accepts TradingView webhook signals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "quantstats>=0.0.64",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
portfolio-backtest = "portfolio_backtest.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
